LayoutTests:

Reviewed by Darin.

        - tests for http://bugs.webkit.org/show_bug.cgi?id=11447
        REGRESSION(NativeListBox): List not scrolled to preselected option
        <rdar://problem/4957463>

        * fast/forms/select-initial-position-expected.checksum: Added.
        * fast/forms/select-initial-position-expected.png: Added.
        * fast/forms/select-initial-position-expected.txt: Added.
        * fast/forms/select-initial-position.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11447
        REGRESSION(NativeListBox): List not scrolled to preselected option
        <rdar://problem/4957463>

        Initiate scroll when selected <option> is added to <select>.

        * html/HTMLOptionElement.cpp:
        (WebCore::HTMLOptionElement::insertedIntoDocument):
        * html/HTMLOptionElement.h:
        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::notifyOptionSelected):
        (WebCore::HTMLSelectElement::updateListBoxSelection):
        (WebCore::HTMLSelectElement::scrollToSelection):
        * html/HTMLSelectElement.h:



Canonical link: https://commits.webkit.org/16649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19797 268f45cc-cd09-0410-ab3c-d52691b4dbfc